Code improvements to pass the findBugsMain tests