@@ -30,7 +30,7 @@ final class RuleFunctionCeil extends RuleFunction {
                     arguments.size() + " were supplied");
         }
 
-        return String.valueOf(new Double(Math.ceil(toDouble(arguments.get(0), 0.0))).intValue());
+        return String.valueOf(Double.valueOf(Math.ceil(toDouble(arguments.get(0), 0.0))).intValue());
     }
 
     private static double toDouble(@Nullable final String str, final double defaultValue) {
